fix how the search modal looks on mobile

--- a/wp-content/universal-assets/v1/scss/universal-nav.scss
+++ b/wp-content/universal-assets/v1/scss/universal-nav.scss
@@ -668,6 +668,9 @@ body.mobile-nav {
     }
     .search-form {
         min-width: 620px;
+		@media (max-width: 767px) {
+			min-width: 100%;
+		}
         label { font-weight: 300; }
         .sb-search-input {
             background: transparent;
@@ -704,6 +707,12 @@ body.mobile-nav {
             font-size: 22px;
             margin-top: -5px;
             height: 50px;
+			@media screen and (max-width: 767px) {
+				margin-top: 20px;
+				width: 90%;
+				margin-left: 5%;
+				margin-right: 5%;
+			}
         }
     }
     #popular-links {
@@ -746,7 +755,7 @@ body.mobile-nav {
             content: "x";
         }
         @media (max-width: 767px) {
-            margin-top: 0;
+            margin-top: -50px;
         }
     }
 }
